--- a/login/css/style.css
+++ b/login/css/style.css
@@ -4,6 +4,11 @@ body {
   background-image: url('../img/teamtest.png');
   background-position: cover;
 }
+
+h1 {
+  color: #333 !important;
+}
+
 div.container form {
   margin-top: 20%;
   border: solid 1px white;
